crates/bc-cli/src/commands/snapshots/borrow_checker__commands__import__tests__every_optional_discard_line_fires_with_a_distinct_count.snap
---
source: crates/bc-cli/src/commands/import.rs
expression: stabilised
---
Discarded batch BATCH_ID (csv, STARTED_AT).
  18 postings removed, 5 transactions removed
  1 of them you had edited since the import
  2 of them sat in reconciled transactions
  4 of them sat in flagged transactions
  3 postings kept — their provenance was adopted, not imported
  9 slots freed for legs you had deleted
  7 other references removed with their transactions
  8 references from another batch lost their posting
  2 tags removed — created by this import, applied nowhere else
  1 tag kept — created by this import, since applied elsewhere
  3 accounts removed — created by this import, named by nothing else
  1 account kept — created by this import, since named elsewhere
  2 account fields reverted — filled by this import, still holding its value
