crates/bc-cli/src/commands/snapshots/borrow_checker__commands__import__tests__report_for_a_clean_run.snap
---
source: crates/bc-cli/src/commands/import.rs
expression: "report(3, 0, 0, 0, &[]).render()"
---
Imported 3 transactions, attached 0 postings.
