crates/bc-cli/src/commands/snapshots/borrow_checker__commands__import__tests__report_for_a_run_skipping_legs_for_other_reasons.snap
---
source: crates/bc-cli/src/commands/import.rs
expression: "report(1, 0, 0, 2, &[]).render()"
---
Imported 1 transaction, attached 0 postings.

Skipped 2 postings for other reasons; each was reported as a warning.
